Add fonts and bootstrap link

--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #f8f9fa;
+    margin: 0;
+    padding: 0;
+}
+
 .nav-item .nav-link.active {
     background-color: #28a745;
     color: white !important;
@@ -17,7 +24,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 40vh;
+    min-height: 60vh;
     flex-direction: column;
     margin-top: 60px;
 }
@@ -42,21 +49,20 @@
     width: 100%;
 }
 
-.nav-item .nav-link.active {
-    background-color: #28a745;
-}
-
 .form-area {
-    margin-top: 210px;
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
     margin-left: auto;
-    margin-right: 540px;
+    margin-right: auto;
 }
 
 .title {
-    font-size: 3rem;
+    font-size: 2.5rem;
     font-weight: bold;
     text-align: center;
     margin-bottom: 50px;
+}
+
+.mb-3 {
+    margin-bottom: 1.5rem;
 }
